plugins/woocommerce-admin/client/marketplace/components/notice/notice.scss
@import '../../stylesheets/_variables.scss';

.woocommerce-marketplace {
	&__notice {
		align-items: flex-start;
		border: 1px solid #F0F0F0;
		box-shadow: 0px 2px 6px 0px #0000000D;
		display: flex;
		gap: 12px;
		margin-bottom: 40px;
		opacity: 1;
		padding: 12px;
		transition: opacity 1s ease-out;

		&-variant-info {
			border-left: 4px solid var(--wp-admin-theme-color, #007cba);
		}

		&-variant-error {
			border-left: 4px solid $alert-red;
		}

		&-variant-warning {
			border-left: 4px solid $alert-yellow;
		}

		&-variant-success {
			border-left: 4px solid $valid-green;
		}

		&-icon {
			margin-top: -3px;
			&.icon-color-info {
				fill: var(--wp-admin-theme-color, #007cba);
			}
		
			&.icon-color-error {
				fill: $alert-red;
			}
		
			&.icon-color-warning {
				fill: $alert-yellow;
			}
		
			&.icon-color-success {
				fill: $valid-green;
			}
		}

		&-content {
			align-items: flex-start;
			display: flex;
			flex-direction: column;
			flex: 1;
			gap: 12px;
		}

		&-description {
			color: $gray-900;
			font-size: 13px;
			font-weight: 400;
			line-height: 20px;
			margin: 0;
		}

		&-children {
			color: $gray-900;
			font-size: 13px;
			font-weight: 400;
			gap: 8px;
			line-height: 20px;
			margin: 0;
		}

		&-close {
			background: none;
			border: none;
			cursor: pointer;
		}
	}
}

